# rusty-mail

./: Cargo.toml  README.md
src/: config.rs  email.rs  main.rs
