[package]
name = "rusty-mail"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "A CLI Gmail client built in Rust"
homepage = "https://github.com/vibsthebot/rusty-mail"
repository = "https://github.com/vibsthebot/rusty-mail"
readme = "README.md"

[dependencies]
imap = "2.4.1"
native-tls = "0.2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
base64 = "0.22.1"
mailparse = "0.15.0"
html2text = "0.13.3"
quoted_printable = "0.5.1"
lettre = "0.11.10"
